--- a/SD_EXIF_Editor_v2/Views/MainView.axaml
+++ b/SD_EXIF_Editor_v2/Views/MainView.axaml
@@ -3,14 +3,57 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:SD_EXIF_Editor_v2.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+			 xmlns:models="using:SD_EXIF_Editor_v2.Models"
+			 xmlns:converters="using:SD_EXIF_Editor_v2.Converters"
+             mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="450"
              x:Class="SD_EXIF_Editor_v2.Views.MainView"
              x:DataType="vm:MainViewModel">
-  <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:MainViewModel />
-  </Design.DataContext>
+	<Design.DataContext>
+		<vm:MainViewModel />
+	</Design.DataContext>
 
-  <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<SplitView IsPaneOpen="{Binding IsPaneOpen}"
+               CompactPaneLength="45"
+               DisplayMode="CompactInline"
+               OpenPaneLength="135"
+               Background="#1e1e1e"
+               PaneBackground="#1e1e1e">
+		<SplitView.Pane>
+			<StackPanel Orientation="Vertical"
+                  Spacing="5"
+                  HorizontalAlignment="Stretch"
+                  VerticalAlignment="Top">
+				<Button HorizontalAlignment="Left"
+						Width="32"
+						Height="32"
+						Margin="7 10"
+						Command="{Binding TriggerPaneCommand}">
+					<PathIcon Height="11" Data="{StaticResource LineHorizontal3Regular}" />
+				</Button>
+				<ListBox Margin="2 0 -100 0" Padding="0" ItemsSource="{Binding Items}"
+						 SelectedItem="{Binding SelectedListItem}">
+					<ListBox.Styles>
+						<Style Selector="ListBoxItem">
+							<Setter Property="Padding" Value="12 8"></Setter>
+						</Style>
+					</ListBox.Styles>
+					<ListBox.ItemTemplate>
+						<DataTemplate DataType="{x:Type models:ListItemTemplate}">
+							<StackPanel Spacing="17" Orientation="Horizontal">
+								<PathIcon Data="{Binding IconKey, Converter={x:Static converters:TypeConverters.IconConverter}}"
+										  Width="14" />
+								<TextBlock Text="{Binding Label}" />
+							</StackPanel>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+				</ListBox>
+			</StackPanel>
+		</SplitView.Pane>
+		<SplitView.Content>
+			<Border CornerRadius="12 0 0 0"
+              Background="#2d2d2d">
+				<TransitioningContentControl Content="{Binding CurrentPage}" />
+			</Border>
+		</SplitView.Content>
+	</SplitView>
 </UserControl>
