a lot of changes on the way of making it work and it does kinda

--- a/SD_EXIF_Editor_v2/App.axaml
+++ b/SD_EXIF_Editor_v2/App.axaml
@@ -12,6 +12,7 @@
 	<Application.Resources>
 		<ResourceDictionary>
 			<c:NSFWLevelsToBoolConverter x:Key="NSFWLevelsToBoolConverter"/>
+			<c:PathBitmapConverter x:Key="PathBitmapConverter"/>
 		</ResourceDictionary>
 	</Application.Resources>
 
