--- a/SD_EXIF_Editor_v2/Views/EditMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/EditMetadataView.axaml
@@ -2,10 +2,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:interfaces="using:SD_EXIF_Editor_v2.ViewModels.Interfaces"
+             xmlns:vm="using:SD_EXIF_Editor_v2.ViewModels"
+			 xmlns:interfaces="using:SD_EXIF_Editor_v2.ViewModels.Interfaces"
 			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SD_EXIF_Editor_v2.EditMetadataView"
 			 x:DataType="interfaces:IEditMetadataViewModel">
+	<Design.DataContext>
+		<vm:EditMetadataViewModel/>
+	</Design.DataContext>
 	<StackPanel>
 		<TextBlock Text="Edit"
 				   Grid.Row="0"
@@ -13,21 +17,26 @@
 				   Margin="0 12"
 				   Theme="{StaticResource TitleTextBlock}"/>
 		<Separator/>
-		<StackPanel Orientation="Horizontal"
-					Margin="0 6">
-			<PathIcon Data="{StaticResource ExclamationTriangle}"
-					  Foreground="{StaticResource SemiColorWarning}"/>
-			<TextBlock Text="Warning: Incorrect edits may break metadata parsing. Proceed with caution."
-					   Margin="6 0"
-					   Classes="Warning"/>
-		</StackPanel>
-		<TextBox Text="{Binding RawMetadata}"
-				 Grid.Row="1"
-				 HorizontalAlignment="Stretch"
-				 Classes="TextArea"
-				 TextWrapping="Wrap"
-				 AcceptsReturn="True"
-				 AcceptsTab="False"/>
+		<ScrollViewer>
+			<StackPanel>
+				<StackPanel Orientation="Horizontal"
+							Margin="0 6">
+					<PathIcon Data="{StaticResource ExclamationTriangle}"
+							  Foreground="{StaticResource SemiColorWarning}"/>
+					<TextBlock Text="Warning: Incorrect edits may break metadata parsing. Proceed with caution."
+							   Margin="6 0"
+							   Classes="Warning"/>
+				</StackPanel>
+				<TextBox Text="{Binding RawMetadata, UpdateSourceTrigger=LostFocus}"
+						 Grid.Row="1"
+						 HorizontalAlignment="Stretch"
+						 Classes="TextArea"
+						 TextWrapping="Wrap"
+						 AcceptsReturn="True"
+						 AcceptsTab="False"/>
+
+			</StackPanel>
+		</ScrollViewer>
 		<Grid ColumnDefinitions="*,Auto,Auto"
 					 Margin="18">
 			<Button Content="Clear"
