--- a/SD_EXIF_Editor_v2/Views/MainView.axaml
+++ b/SD_EXIF_Editor_v2/Views/MainView.axaml
@@ -58,7 +58,8 @@
 						<MenuItem Header="File">
 						<MenuItem Header="Open" 
 								  CornerRadius="12 0 0 0">
-							<MenuItem Header="File..."/>
+							<MenuItem Header="File..."
+									  Command="{Binding OpenCommand}"/>
 							<MenuItem Header="Directory..."/>
 						</MenuItem>
 						<MenuItem Header="Close"/>
