--- a/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
@@ -2,7 +2,134 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="SD_EXIF_Editor_v2.ViewMetadataView">
-  Welcome to Avalonia from VMV!
+             xmlns:vm="using:SD_EXIF_Editor_v2.ViewModels"
+			 xmlns:interfaces="using:SD_EXIF_Editor_v2.ViewModels.Interfaces"
+			 xmlns:c="using:SD_EXIF_Editor_v2.Controls"
+			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             x:Class="SD_EXIF_Editor_v2.ViewMetadataView"
+			 x:DataType="vm:ViewMetadataViewModel">
+	<Design.DataContext>
+		<vm:ViewMetadataViewModel/>
+	</Design.DataContext>
+	<ThemeVariantScope RequestedThemeVariant="Dark">
+		<DockPanel>
+			<TextBlock Text="View"
+					   DockPanel.Dock="Top"
+					   Classes="H5"
+					   Margin="0 12"
+					   Theme="{StaticResource TitleTextBlock}"/>
+			<Separator DockPanel.Dock="Top"/>
+			<Grid ColumnDefinitions="1*,1*"
+				  Grid.Row="2">
+				<Image Grid.Column="0"
+					   Source="{Binding FilePath, Converter={StaticResource PathBitmapConverter}}"
+					   Stretch="Uniform"
+					   MaxWidth="1000"
+					   MaxHeight="1000"/>
+				<ScrollViewer Grid.Column="1">
+					<Border Background="{StaticResource SemiColorBackground1}"
+							CornerRadius="12"
+							Padding="16">
+						<ScrollViewer>
+							<HeaderedContentControl>
+								<HeaderedContentControl.Header>
+									<Grid ColumnDefinitions="Auto,Auto,*,Auto">
+										<PathIcon Data="{StaticResource InputCursorText}"
+												  Height="16"
+												  Grid.Column="0"/>
+										<TextBlock Text="Generation data"
+												   Margin="8 0"
+												   FontSize="20"
+												   FontWeight="Bold"
+												   VerticalAlignment="Center"
+												   Grid.Column="1"/>
+										<c:ButtonWithTempContent Grid.Column="3"
+																 VerticalAlignment="Center"
+																 VerticalContentAlignment="Center"
+																 Theme="{DynamicResource BorderlessButton}"
+																 Command="{Binding CopyToClipboardCommand}"
+																 CommandParameter="{Binding RawMetadata}">
+											<c:ButtonWithTempContent.Content>
+												<StackPanel Orientation="Horizontal">
+													<PathIcon Data="{StaticResource Copy}"
+															  Height="14"
+															  Foreground="{StaticResource SemiLightBlue1}"/>
+													<TextBlock Text="COPY ALL"
+															   Margin="10,0,0,0"
+															   VerticalAlignment="Center"
+															   FontSize="12"
+															   FontWeight="Regular"
+															   Foreground="{StaticResource SemiLightBlue1}"/>
+												</StackPanel>
+											</c:ButtonWithTempContent.Content>
+											<c:ButtonWithTempContent.TempContent>
+												<StackPanel Orientation="Horizontal">
+													<PathIcon Data="{StaticResource Check2}"
+															  Height="14"
+															  Foreground="{StaticResource SemiColorSuccess}"/>
+													<TextBlock Text="COPIED"
+															   VerticalAlignment="Center"
+															   Margin="10 0"
+															   FontSize="12"
+															   FontWeight="Regular"
+															   Foreground="{StaticResource SemiColorSuccess}"/>
+												</StackPanel>
+											</c:ButtonWithTempContent.TempContent>
+										</c:ButtonWithTempContent>
+									</Grid>
+								</HeaderedContentControl.Header>
+								<Grid Margin="0 10"
+									  RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+									<HeaderedContentControl Grid.Row="0">
+										<HeaderedContentControl.Header>
+											<TextBlock Text="Resources used"
+													   FontWeight="Bold"
+													   FontSize="18"/>
+										</HeaderedContentControl.Header>
+										<TextBlock Text="..."/>
+									</HeaderedContentControl>
+									<Separator Grid.Row="1"/>
+									<c:PromptControl Grid.Row="2"
+													 Title="Prompt"
+													 Prompt="{Binding Prompt}"/>
+									<c:PromptControl Grid.Row="3"
+													 Title="Negative prompt"
+													 Prompt="{Binding NegativePrompt}"/>
+									<Separator Grid.Row="4"/>
+									<HeaderedContentControl Grid.Row="5">
+										<HeaderedContentControl.Header>
+											<TextBlock Text="Other metadata"
+													   FontWeight="Bold"
+													   FontSize="18"/>
+										</HeaderedContentControl.Header>
+										<ItemsControl ItemsSource="{Binding MetadataProperties}"
+													  Grid.IsSharedSizeScope="True">
+											<ItemsControl.ItemTemplate>
+												<DataTemplate>
+													<Grid>
+														<Grid.ColumnDefinitions>
+															<ColumnDefinition Width="Auto"
+																			  SharedSizeGroup="a"/>
+															<ColumnDefinition Width="*"/>
+														</Grid.ColumnDefinitions>
+
+														<TextBlock Text="{Binding Key}"
+																	   Classes="Secondary"/>
+														<TextBlock Text="{Binding Value}"
+																   Grid.Column="1"
+																   HorizontalAlignment="Right"
+																   TextWrapping="WrapWithOverflow"/>
+													</Grid>
+												</DataTemplate>
+											</ItemsControl.ItemTemplate>
+										</ItemsControl>
+									</HeaderedContentControl>
+								</Grid>
+							</HeaderedContentControl>
+						</ScrollViewer>
+					</Border>
+				</ScrollViewer>
+			</Grid>
+		</DockPanel>
+	</ThemeVariantScope>
 </UserControl>
