fixed layout of SettingsView to make scrollviewer work correctly

--- a/SD_EXIF_Editor_v2/Views/SettingsView.axaml
+++ b/SD_EXIF_Editor_v2/Views/SettingsView.axaml
@@ -10,12 +10,13 @@
 	<Design.DataContext>
 		<vm:SettingsViewModel/>
 	</Design.DataContext>
-	<StackPanel>
+	<DockPanel>
 		<TextBlock Text="Settings"
+				   DockPanel.Dock="Top"
 				   Classes="H5"
 				   Margin="0 12"
 				   Theme="{StaticResource TitleTextBlock}"/>
-		<Separator/>
+		<Separator DockPanel.Dock="Top"/>
 		<ScrollViewer>
 			<StackPanel>
 			<TextBlock Text="Browsing levels"
@@ -141,5 +142,5 @@
 			</StackPanel>
 			</StackPanel>
 		</ScrollViewer>
-	</StackPanel>
+	</DockPanel>
 </UserControl>
