--- a/SD_EXIF_Editor_v2/App.axaml
+++ b/SD_EXIF_Editor_v2/App.axaml
@@ -13,6 +13,8 @@
 		<ResourceDictionary>
 			<c:NSFWLevelsToBoolConverter x:Key="NSFWLevelsToBoolConverter"/>
 			<c:PathBitmapConverter x:Key="PathBitmapConverter"/>
+			<c:ToUpperConverter x:Key="ToUpperConverter"/>
+			<c:ColorToColorWithTransparencyConverter x:Key="ColorToColorWithTransparencyConverter"/>
 		</ResourceDictionary>
 	</Application.Resources>
 
