--- a/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
+++ b/SD_EXIF_Editor_v2/Views/ViewMetadataView.axaml
@@ -23,19 +23,18 @@
 				  Grid.Row="2">
 				<Image Grid.Column="0"
 					   Source="{Binding FilePath, Converter={StaticResource PathBitmapConverter}}"
-					   Stretch="Uniform"
-					   MaxWidth="1000"
-					   MaxHeight="1000"/>
+					   Stretch="Uniform"/>
 				<ScrollViewer Grid.Column="1">
 					<Border Background="{StaticResource SemiColorBackground1}"
 							CornerRadius="12"
-							Padding="16">
+							Padding="12">
 						<ScrollViewer>
 							<HeaderedContentControl>
 								<HeaderedContentControl.Header>
 									<Grid ColumnDefinitions="Auto,Auto,*,Auto">
 										<PathIcon Data="{StaticResource InputCursorText}"
 												  Height="16"
+												  VerticalAlignment="Center"
 												  Grid.Column="0"/>
 										<TextBlock Text="Generation data"
 												   Margin="8 0"
@@ -45,7 +44,6 @@
 												   Grid.Column="1"/>
 										<c:ButtonWithTempContent Grid.Column="3"
 																 VerticalAlignment="Center"
-																 VerticalContentAlignment="Center"
 																 Theme="{DynamicResource BorderlessButton}"
 																 Command="{Binding CopyToClipboardCommand}"
 																 CommandParameter="{Binding RawMetadata}">
@@ -53,13 +51,13 @@
 												<StackPanel Orientation="Horizontal">
 													<PathIcon Data="{StaticResource Copy}"
 															  Height="14"
-															  Foreground="{StaticResource SemiLightBlue1}"/>
+															  Foreground="{StaticResource SemiLightBlue5}"/>
 													<TextBlock Text="COPY ALL"
 															   Margin="10,0,0,0"
 															   VerticalAlignment="Center"
 															   FontSize="12"
 															   FontWeight="Regular"
-															   Foreground="{StaticResource SemiLightBlue1}"/>
+															   Foreground="{StaticResource SemiLightBlue5}"/>
 												</StackPanel>
 											</c:ButtonWithTempContent.Content>
 											<c:ButtonWithTempContent.TempContent>
@@ -78,25 +76,35 @@
 										</c:ButtonWithTempContent>
 									</Grid>
 								</HeaderedContentControl.Header>
-								<Grid Margin="0 10"
-									  RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
-									<HeaderedContentControl Grid.Row="0">
+								<DockPanel>
+									<HeaderedContentControl DockPanel.Dock="Top"
+															Margin="0 4">
 										<HeaderedContentControl.Header>
 											<TextBlock Text="Resources used"
 													   FontWeight="Bold"
 													   FontSize="18"/>
 										</HeaderedContentControl.Header>
-										<TextBlock Text="..."/>
+										<ItemsControl ItemsSource="{Binding CivitItemViewModels}"
+													  Margin="0 4">
+											<ItemsControl.ItemsPanel>
+												<ItemsPanelTemplate>
+													<StackPanel Spacing="8"/>
+												</ItemsPanelTemplate>
+											</ItemsControl.ItemsPanel>
+										</ItemsControl>
 									</HeaderedContentControl>
-									<Separator Grid.Row="1"/>
-									<c:PromptControl Grid.Row="2"
+									<Separator DockPanel.Dock="Top"/>
+									<c:PromptControl DockPanel.Dock="Top"
 													 Title="Prompt"
-													 Prompt="{Binding Prompt}"/>
-									<c:PromptControl Grid.Row="3"
+													 Prompt="{Binding Prompt}"
+													 Margin="0 4"/>
+									<c:PromptControl DockPanel.Dock="Top"
 													 Title="Negative prompt"
-													 Prompt="{Binding NegativePrompt}"/>
-									<Separator Grid.Row="4"/>
-									<HeaderedContentControl Grid.Row="5">
+													 Prompt="{Binding NegativePrompt}"
+													 Margin="0 4"/>
+									<Separator DockPanel.Dock="Top"/>
+									<HeaderedContentControl DockPanel.Dock="Top"
+															Margin="0 4">
 										<HeaderedContentControl.Header>
 											<TextBlock Text="Other metadata"
 													   FontWeight="Bold"
@@ -124,7 +132,7 @@
 											</ItemsControl.ItemTemplate>
 										</ItemsControl>
 									</HeaderedContentControl>
-								</Grid>
+								</DockPanel>
 							</HeaderedContentControl>
 						</ScrollViewer>
 					</Border>
